// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`websocket crypto endpoint should return success 1`] = `
{
  "data": {
    "result": 40067,
  },
  "result": 40067,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1018,
    "providerDataStreamEstablishedUnixMs": 1010,
    "providerIndicatedTimeUnixMs": 1645203822000,
  },
}
`;

exports[`websocket crypto endpoint with override should return success 1`] = `
{
  "data": {
    "result": 40067,
  },
  "result": 40067,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1018,
    "providerDataStreamEstablishedUnixMs": 1010,
    "providerIndicatedTimeUnixMs": 1645203822000,
  },
}
`;

exports[`websocket lwba endpoint should return success 1`] = `
{
  "data": {
    "ask": 1.1662,
    "bid": 1.1607,
    "mid": 1.1635,
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1018,
    "providerDataStreamEstablishedUnixMs": 1010,
    "providerIndicatedTimeUnixMs": 1677876163000,
  },
}
`;

exports[`websocket lwba endpoint with override should return success 1`] = `
{
  "data": {
    "ask": 2651.01,
    "bid": 2652.26,
    "mid": 2651.63,
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1018,
    "providerDataStreamEstablishedUnixMs": 1010,
    "providerIndicatedTimeUnixMs": 1677876163000,
  },
}
`;
